# 3-course

./: .gitignore  CMakeLists.txt  README.md  main.cpp  requirements.txt  task1.py
clickhouse/: docker-compose.yml
daa/: CMakeLists.txt  Dockerfile  README.md  main.cpp
daa/include/: opencl.h  openmp.h  utils.h
daa/meta/: task.txt
daa/src/: opencl.cpp  openmp.cpp  utils.cpp
include/: opencl.h  openmp.h  random_variable.h  random_walk.h  random_walk_visualizer.h  task11.h  task12.h  task9.h
linux/: CMakeLists.txt  main.c
meta/: t7_1.txt  t7_list.txt  task.txt  tasks.txt
models/: boston_basic_model_metadata.json  boston_improved_model_metadata.json  cats_dogs_basic_metadata.json  cats_dogs_improved_metadata.json  imdb_basic_model_metadata.json  imdb_improved_model_metadata.json  mnist_basic_model_metadata.json  mnist_best_model_metadata.json  mnist_improved_model_metadata.json
ossp/: .gitignore  README.md
ossp/include/: task10.h  task12.h  task7.h  task8.h  task9.h
ossp/linux/: CMakeLists.txt  main.c
ossp/meta/: t7_2.txt  t7_3.txt
ossp/src/: task1.c  task10.c  task11.c  task12.c  task2.c  task6.c  task7.c  task8.c  task9.c
ossp/windows/: CMakeLists.txt  main.c
src/: main.cpp  opencl.cpp  openmp.cpp  random_variable.cpp  random_walk.cpp  random_walk_visualizer.cpp  task10.c  task11.c  task12.c  task9.c  utils.cpp  visualizer.cpp
tasks/: task1.py  task2.py  task3.py  task4.py
utils/: __init__.py  models.py
